--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "joi": "^18.0.1",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
-    "next": "16.0.3",
+    "next": "16.0.10",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.66.1",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5"
@@ -34,11 +34,15 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.19.25",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "16.0.10",
     "tailwindcss": "^4.1.17",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
