--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4.1.17",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   },
   "overrides": {
     "@types/react": "19.2.7",
