--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
@@ -17,6 +17,7 @@
     "@tailwindcss/cli": "^4.1.17",
     "file-type": "^21.1.0",
     "firebase-admin": "^13.6.0",
+    "google-auth-library": "^10.5.0",
     "joi": "^18.0.1",
     "lucide-react": "^0.554.0",
     "next": "16.0.10",
@@ -26,7 +27,8 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.66.1",
     "react-redux": "^9.2.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
