--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.17.3",
-    "@google-cloud/tasks": "^6.2.1",
     "@heroui/react": "^2.8.5",
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.10.1",
@@ -27,8 +26,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.66.1",
     "react-redux": "^9.2.0",
-    "react-toastify": "^11.0.5",
-    "server-only": "^0.0.1"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
